# operations-debs-contenttranslation-apertium-bel-rus

./: AUTHORS  Makefile.am  README  apertium-bel-rus.bel-rus.t1x  apertium-bel-rus.bel-rus.t2x  apertium-bel-rus.rus-bel.t1x  apertium-bel-rus.rus-bel.t2x  apertium-bel-rus.rus-bel.t4x  apertium-bel-rus_0.2.0~r81186.orig.tar.bz2.delta  apertium-bel-rus_0.2.0~r81186.orig.tar.bz2.id  apertium-bel-rus_0.2.1.orig.tar.bz2.delta  apertium-bel-rus_0.2.1.orig.tar.bz2.id  configure.ac  modes.xml
apertium-bel-0.1.1/: AUTHORS  Makefile.am  README  apertium-bel.bel.rlx  apertium-bel.pc.in  apertium-bel.post-bel.dix  apertium-bel.post-short-u-1.dix  apertium-bel.post-short-u-2.dix  configure.ac  modes.xml
apertium-rus-0.2.1/: AUTHORS  Makefile.am  configure.ac
debian/: changelog  control
